# lemur

./: INSTALL  LICENSE  Lemur-VS2005.sln  Lemur-VS2008.sln  Lemur.sln  MakeApp  MakeContrib  MakeDefns.in  MakeMod  MakeRules  Makefile  Makefile.app.in  Makefile.in  README  README_distrib  UIMA-README.html  configure  configure.ac  configure.in  copyright  copyright.cmu  copyright.umass  dos2unix.sh  lemur_cluster.mak  lemur_distrib.mak  lemur_index.mak  lemur_langmod.mak  lemur_retrieval.mak  lemur_summarization.mak  lemur_utility.mak  mkapp
app/: BasicSummApp-VS2005.vcproj  BasicSummApp-VS2008.vcproj  BasicSummApp.vcproj  BuildDocMgr-VS2005.vcproj  BuildDocMgr-VS2008.vcproj  BuildDocMgr.vcproj  BuildIndex-VS2005.vcproj  BuildIndex-VS2008.vcproj  BuildIndex.vcproj  BuildIndriIndex.vcproj  BuildInvertedIndex.vcproj  BuildKeyfileIncIndex.vcproj  BuildPropIndex-VS2005.vcproj  BuildPropIndex-VS2008.vcproj  BuildPropIndex.vcproj  ClusterApp-VS2005.vcproj  ClusterApp-VS2008.vcproj  ClusterApp.vcproj  CollSelIndex-VS2005.vcproj  CollSelIndex-VS2008.vcproj  CollSelIndex.vcproj  CreateCosineValues.vcproj  DistRetEval-VS2005.vcproj  DistRetEval-VS2008.vcproj  DistRetEval.vcproj  EstimateDirPrior-VS2005.vcproj  EstimateDirPrior-VS2008.vcproj  EstimateDirPrior.vcproj  GenL2Norm-VS2005.vcproj  GenL2Norm-VS2008.vcproj  GenL2Norm.vcproj  GenerateQueryModel-VS2005.vcproj  GenerateQueryModel-VS2008.vcproj  GenerateQueryModel.vcproj  GenerateSmoothSupport-VS2005.vcproj  GenerateSmoothSupport-VS2008.vcproj  GenerateSmoothSupport.vcproj  IncIndexer.vcproj  IncPassageIndexer.vcproj  IndriBuildIndex-VS2005.vcproj  (+78 more)
app/include/: ParamManager.hpp
app/src/: BasicSummApp.cpp  BuildBasicIndex.cpp  BuildDocMgr.cpp  BuildIndex.cpp  BuildInvertedIndex.cpp  BuildKeyfileIncIndex.cpp  BuildPropIndex.cpp  Cluster.cpp  CollSelIndex.cpp  CreateCosineValues.cpp  DistRetEval.cpp  EstimateDirPrior.cpp  GenL2Norm.cpp  GenerateQueryModel.cpp  GenerateSmoothSupport.cpp  IncIndexer.cpp  IncPassageIndexer.cpp  IndriBuildIndex.cpp  IndriDaemon.cpp  IndriRunQuery.cpp  InvFPMain.cpp  MMRSummApp.cpp  Makefile  ModifyFields.cpp  OfflineCluster.cpp  OkapiEval.cpp  PDictManager.cpp  PLSA.cpp  ParseInQueryOp.cpp  ParseQuery.cpp  ParseToFile.cpp  PassageIndexer.cpp  PorterStemmer.cpp  PushIndexer.cpp  QryBasedSample.cpp  QueryClarity.cpp  QueryModelEval.cpp  RelFBEval.cpp  RetEval.cpp  RetQueryClarity.cpp  (+15 more)
cluster/: cluster-VS2005.vcproj  cluster-VS2008.vcproj  cluster.vcproj
cluster/include/: AgglomCluster.hpp  CentroidCluster.hpp  Cluster.hpp  ClusterDB.hpp  ClusterFactory.hpp  ClusterMethods.hpp  ClusterParam.hpp  ClusterRep.hpp  CosSim.hpp  FlatFileClusterDB.hpp  FloatFreqVector.hpp  KeyfileClusterDB.hpp  OfflineCluster.hpp  PLSA.hpp  PLSAParam.hpp  SimFactory.hpp  SimilarityMethod.hpp  ThresholdFcn.hpp
cluster/src/: AgglomCluster.cpp  CentroidCluster.cpp  Cluster.cpp  ClusterDB.cpp  ClusterFactory.cpp  ClusterRep.cpp  CosSim.cpp  FlatFileClusterDB.cpp  FloatFreqVector.cpp  KeyfileClusterDB.cpp  Makefile  OfflineCluster.cpp  PLSA.cpp  ThresholdFcn.cpp
contrib/antlr/: antlr-VS2005.vcproj  antlr-VS2008.vcproj  antlr.vcproj
contrib/xpdf/: README.xpdf  xpdf-VS2005.vcproj  xpdf-VS2008.vcproj  xpdf.vcproj
contrib/zlib/: zlib-VS2005.vcproj  zlib-VS2008.vcproj  zlib.vcproj
data/: buildparam  clean.sh  database.sgml  dmfb_model_eval_param  dmfb_model_param  fb_okapi_param  fb_tfidf_param  mixfb_kl_dir_param  mixfb_model_eval_param  mixfb_model_param  parse_doc_param  qrel  qrel3column  query  query.struct  rerank_fb_tfidf_param  rerank_simple_kl_dir_param  rerank_tfidf_param  simple_kl_abs_param  simple_kl_dir_param  simple_kl_jm_param  simple_okapi_param  simple_tfidf_param  source  struct_query  suppparam  test.sh  test_basic_index.sh  test_indri_index.sh  test_key_index.sh  test_pos_index.sh  test_struct_query.sh
data/arabic_stem_data/: stopwords.txt
data/basicparam/: build_param  fb_okapi_param  fb_tfidf_param  mixfb_kl_dir_param  mixfb_model_eval_param  mixfb_model_param  mixrelfb_it_eval_param  mixrelfb_it_param  mixrelfb_kl_dir_param  rerank_fb_tfidf_param  rerank_simple_kl_dir_param  rerank_tfidf_param  simple_kl_abs_param  simple_kl_dir_param  simple_kl_jm_param  simple_okapi_param  simple_tfidf_param  supp_param  twostage_param
data/indriparam/: build_param  database.sgml  query.indri  ret_param  smallstop_param
data/keyparam/: build_param  est_dirprior_param  fb_okapi_param  fb_tfidf_param  mixfb_kl_dir_param  mixfb_model_eval_param  mixfb_model_param  mixrelfb_it_eval_param  mixrelfb_it_param  mixrelfb_kl_dir_param  parse_query_param  rerank_fb_tfidf_param  rerank_simple_kl_dir_param  rerank_tfidf_param  simple_kl_abs_param  simple_kl_dir_param  simple_kl_jm_param  simple_okapi_param  simple_tfidf_param  supp_param  twostage_param
data/kstem_data/: country_nationality.txt  dict_supplement.txt  direct_conflations.txt  exception_words.txt  head_word_list.txt  proper_nouns.txt  spanish_verbs.txt
data/posparam/: build_param  est_dirprior_param  fb_okapi_param  fb_tfidf_param  mixfb_kl_dir_param  mixfb_model_eval_param  mixfb_model_param  mixrelfb_it_eval_param  mixrelfb_it_param  mixrelfb_kl_dir_param  rerank_fb_tfidf_param  rerank_simple_kl_dir_param  rerank_tfidf_param  simple_kl_abs_param  simple_kl_dir_param  simple_kl_jm_param  simple_okapi_param  simple_tfidf_param  supp_param  twostage_param
distrib/: distrib-VS2005.vcproj  distrib-VS2008.vcproj  distrib.vcproj
index/: index-VS2005.vcproj  index-VS2008.vcproj  index.vcproj
langmod/: langmod-VS2005.vcproj  langmod-VS2008.vcproj  langmod.vcproj
lemur/: lemur-VS2005.vcproj  lemur-VS2008.vcproj  lemur.vcproj  lemurlib.cpp
parsing/: parsing-VS2005.vcproj  parsing-VS2008.vcproj  parsing.vcproj
retrieval/: retrieval-VS2005.vcproj  retrieval-VS2008.vcproj  retrieval.vcproj
scripts/: convertparam.awk
site-search/: Makefile  README  crawl-index.in  order.xml  stopwords
summarization/: summarization-VS2005.vcproj  summarization-VS2008.vcproj  summarization.vcproj
utility/: utility-VS2005.vcproj  utility-VS2008.vcproj  utility.vcproj
(+1376 files in other folders)
