dnl Process this file with autoconf to produce a configure script.
AC_INIT(app/src/RetEval.cpp)
AC_PROG_CC
AC_PROG_CXX
dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strspn strstr strtol)

AC_SUBST(CFLAGS CPPFLAGS CXXFLAGS LDFLAGS LIBS CC CXX)
AC_OUTPUT(MakeDefns)
